Improvements to shell handlers and CLI messages (#147)
* Addressed some swallowed exceptions
* Updated shell Execute handling
* Added warning if SHA1 is used to create new certificate
* Added algorithm support for more hash oids